--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "element-plus": "^2.10.5",
     "unplugin-auto-import": "^20.0.0",
     "unplugin-vue-components": "^28.8.0",
