--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "element-plus": "^2.10.5",
     "unplugin-auto-import": "^20.0.0",
     "unplugin-vue-components": "^28.8.0",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
