--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "axios": "^1.11.0",
     "element-plus": "^2.10.5",
+    "hono": "^4.9.1",
     "unplugin-auto-import": "^20.0.0",
     "unplugin-vue-components": "^28.8.0",
+    "uuid": "^11.1.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
