--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.11.0",
     "element-plus": "^2.10.5",
     "hono": "^4.9.1",
+    "marked": "^16.1.2",
     "unplugin-auto-import": "^20.0.0",
     "unplugin-vue-components": "^28.8.0",
     "uuid": "^11.1.0",
