--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "element-plus": "^2.10.5",
-    "hono": "^4.9.1",
+    "hono": "^4.9.2",
     "marked": "^16.1.2",
     "unplugin-auto-import": "^20.0.0",
     "unplugin-vue-components": "^28.8.0",
