--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,3 +11,7 @@ migrations_dir = "./migrations" # Add this line
 
 [dev]
 port = 8789 # Use a different port for local development
+
+[[services]]
+binding = "AI_PROXY_SERVICE"
+service = "47.99.123.168:3001"
